[gd_scene load_steps=17 format=1]

[ext_resource path="res://MiniGames/One/one_alt.gd" type="Script" id=1]
[ext_resource path="res://MiniGames/One/gfx/HookMUI.png" type="Texture" id=2]
[ext_resource path="res://RawAssets/Sketches/mary_jane.png" type="Texture" id=3]
[ext_resource path="res://RawAssets/Placeholders/right_arrow.png" type="Texture" id=4]
[ext_resource path="res://RawAssets/Placeholders/right_arrow_d.png" type="Texture" id=5]
[ext_resource path="res://RawAssets/Placeholders/right_arrow_o.png" type="Texture" id=6]
[ext_resource path="res://RawAssets/Placeholders/left_arrow.png" type="Texture" id=7]
[ext_resource path="res://RawAssets/Placeholders/left_arrow_d.png" type="Texture" id=8]
[ext_resource path="res://RawAssets/Placeholders/left_arrow_o.png" type="Texture" id=9]
[ext_resource path="res://MiniGames/One/gfx/love btn.png" type="Texture" id=10]
[ext_resource path="res://MiniGames/One/gfx/like btn.png" type="Texture" id=11]
[ext_resource path="res://MiniGames/One/gfx/star btn.png" type="Texture" id=12]
[ext_resource path="res://MiniGames/One/gfx/HookMUI_overlay.png" type="Texture" id=13]
[ext_resource path="res://MiniGames/One/Notification.tscn" type="PackedScene" id=14]
[ext_resource path="res://RawAssets/Audio/393859__bipwave__80-fight.ogg" type="AudioStream" id=15]
[ext_resource path="res://MiniGames/One/sfx/sfx.gd" type="Script" id=16]

[node name="Base" type="Node2D"]

script/script = ExtResource( 1 )
next_scene = "res://MiniGames/Two/Intro.tscn"

[node name="BG" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = -1.0
margin/right = 583.0
margin/bottom = 639.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Pic" type="TextureButton" parent="BG"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 216.0
margin/top = 129.0
margin/right = 380.0
margin/bottom = 442.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Select" type="Button" parent="BG"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 228.0
margin/top = 426.0
margin/right = 358.0
margin/bottom = 463.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Contact"
flat = false

[node name="LeftButton" type="TextureButton" parent="BG"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 329.0
margin/top = 293.0
margin/right = 406.0
margin/bottom = 415.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
textures/hover = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="RightButton" type="TextureButton" parent="BG"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 295.0
margin/right = 255.0
margin/bottom = 417.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
textures/hover = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="LoveFall" type="Sprite" parent="BG"]

visibility/visible = false
transform/pos = Vector2( 290, 151 )
texture = ExtResource( 10 )

[node name="Tween" type="Tween" parent="BG/LoveFall"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="LikeFall" type="Sprite" parent="BG"]

visibility/visible = false
transform/pos = Vector2( 215, 151 )
texture = ExtResource( 11 )

[node name="Tween" type="Tween" parent="BG/LikeFall"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="StarFall" type="Sprite" parent="BG"]

visibility/visible = false
transform/pos = Vector2( 370, 151 )
texture = ExtResource( 12 )

[node name="Tween" type="Tween" parent="BG/StarFall"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Panel" type="Panel" parent="BG"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 176.0
margin/top = 397.0
margin/right = 407.0
margin/bottom = 466.0

[node name="Like" type="TextureButton" parent="BG/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 12.0
margin/right = 62.0
margin/bottom = 61.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Love" type="TextureButton" parent="BG/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 92.0
margin/top = 12.0
margin/right = 142.0
margin/bottom = 61.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Star" type="TextureButton" parent="BG/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 171.0
margin/top = 12.0
margin/right = 221.0
margin/bottom = 61.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Overlay" type="TextureFrame" parent="BG"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 582.0
margin/bottom = 640.0
texture = ExtResource( 13 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="LikeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="LoveTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="StarTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="VictoryPanel" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 195.0
margin/right = 445.0
margin/bottom = 356.0

[node name="Label" type="Label" parent="VictoryPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = 68.0
margin/right = 267.0
margin/bottom = 82.0
text = "Congratz!  They would like to meet!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DefeatPanel" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 195.0
margin/right = 445.0
margin/bottom = 356.0

[node name="Label" type="Label" parent="DefeatPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 48.0
margin/top = 73.0
margin/right = 273.0
margin/bottom = 87.0
text = "Sorry.  They don't want to meet."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Node" parent="." instance=ExtResource( 14 )]

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500
script/script = ExtResource( 16 )

[connection signal="pressed" from="BG/Select" to="." method="_on_Select_pressed"]

[connection signal="pressed" from="BG/LeftButton" to="." method="_on_LeftButton_pressed"]

[connection signal="pressed" from="BG/RightButton" to="." method="_on_RightButton_pressed"]

[connection signal="pressed" from="BG/Panel/Like" to="." method="_on_Like_pressed"]

[connection signal="pressed" from="BG/Panel/Love" to="." method="_on_Love_pressed"]

[connection signal="pressed" from="BG/Panel/Star" to="." method="_on_Star_pressed"]

[connection signal="timeout" from="LikeTimer" to="." method="_on_LikeTimer_timeout"]

[connection signal="timeout" from="LoveTimer" to="." method="_on_LoveTimer_timeout"]

[connection signal="timeout" from="StarTimer" to="." method="_on_StarTimer_timeout"]


